<resources>
    <string name="app_name">GBas</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="TODO" translatable="false">TODO</string>
    <string name="menu_search">Search</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_profile">Profile</string>
    <!-- Strings related to btn_login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="welcome">"Welcome! "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_auth" translatable="false">AuthActivity</string>
    <string name="default_web_client_id" translatable="false">65177952882-ij0uju0psvd162nkhdv9bak74ssrbfsc.apps.googleusercontent.com</string>
    <string name="route_auth_firebase" translatable="false">auth/firebase/</string>
    <string name="api_base_url" translatable="false">http://192.168.220.29:8000/</string>
</resources>