<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- Домашняя -->
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_home" />

    <!-- Поиск -->
    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/ic_search"
        android:title="@string/menu_search" />

    <!-- Избранное -->
    <item
        android:id="@+id/nav_favorites"
        android:icon="@drawable/ic_favorites"
        android:title="@string/menu_favorites" />

    <!-- Корзина -->
    <item
        android:id="@+id/nav_cart"
        android:icon="@drawable/ic_shopping_cart"
        android:title="@string/menu_cart" />

    <!-- Профиль -->
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/menu_profile" />
</menu>